--- a/Lesson-03/Activity3.html
+++ b/Lesson-03/Activity3.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Sir Mutha school Website </h1>
+    <hr>
+    <Br>
+    <a href="https://sirmuthaschool.edu.in/">Enroll</a>
 </body>
 </html>
