--- a/Lesson-05/Afterclassproject.html
+++ b/Lesson-05/Afterclassproject.html
@@ -14,7 +14,26 @@ body{
         img{
         
             height:200px;
+
+        
         }
+
+
+        div{
+  font-size: 30px;
+}
+
+#blue-color{
+
+    color:white;
+    background-color:Blue;
+}
+
+.yellow-color{
+
+    color:purple;
+    background-color:yellow;
+}
 </style>
 <body>
     <center>
