--- a/Lesson-09/Activity2.html
+++ b/Lesson-09/Activity2.html
@@ -62,7 +62,8 @@
 
 <body>
     <div>
-        <h1 class="share-tech-regular">Codingal</h1>
+        <h1 class="share-tech-regular">I am Steve! With a<br>
+        Flint and Steel!</h1>
 
     </div>
 </body>
